# esp32s3test

./: Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs
