[package]
name = "esp32s3test"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32s3test"
harness = false      # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
  "alloc",
  "wake-from-isr",
] }
ws2812-async = "0.3"
smart-leds = "0.4.0"
anyhow = "1.0.95"
embedded-hal-async = "1.0.0"
edge-executor = "0.4.1"
embassy-time = { version = "0.4", features = ["generic-queue-8"] }

[build-dependencies]
embuild = "0.33"
